kustomize/configurationLogger/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: configuration-logger
  name: configuration-logger
  namespace: argocd-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: configuration-logger
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: configuration-logger
    spec:
      containers:
      - image: gitops-microservice:1.0.0-SNAPSHOT
        name: configuration-logger
        resources: {}
