kustomize/configurationLogger/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: configurationLogger
  name: configurationLogger
  namespace: argocd-test
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: configurationLogger
    weight: 100
